迁移部分代码写法；修正迁移的代码错误

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,12 @@
     <title>Hedge</title>
   </head>
   <body>
+    <noscript>
+      <div id="noscript" class="notification is-danger fixed center">
+          <b class="is-size-5">未启用JavaScript</b>
+          <p>Hedge网页版必须在启用JavaScript的环境中中运行。</p>
+      </div>
+    </noscript>
     <div id="app"></div>
   </body>
 </html>
