完成server端基本构件设计，并完成最小维持所需部分组件

--- a/server/src/main/resources/forbidden.html
+++ b/server/src/main/resources/forbidden.html
@@ -32,7 +32,7 @@
 <body>
     <div class="box">
         <b class="title">Web访问未开启</b>
-        <p class="content">若想要通过Web访问Hedge的功能，请在【设置】-【Web访问】中开启Web访问权限。</p>
+        <p class="content">如果想要通过Web访问Hedge，请在【设置】-【Web访问】中开启Web访问功能。</p>
     </div>
 </body>
 </html>
