前端: 完成side layout布局

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <noscript>
-      <div id="noscript" class="notification is-danger fixed center">
-          <b class="is-size-5">未启用JavaScript</b>
+      <div id="noscript" class="block is-danger fixed center is-size-medium">
+          <b class="is-size-4">未启用JavaScript</b>
           <p>Hedge网页版必须在启用JavaScript的环境中运行。</p>
       </div>
     </noscript>
